--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<!-- resume header with your name and title -->
 			<h1>SAYAN KARMAKAR</h1>
 			<hr>
-			YOUR TITLE (EX: SOFTWARE ENGINEERING STUDENT)
+			YOUR TITLE (EX: MLSA)
 			<hr>
 		</header>
 		<main>
@@ -18,17 +18,17 @@
 				<section>
 					<h2>CONTACT</h2>
 					<p>
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:your-email@example.com">Sayan.Karmakar@studentambassadors.com</a>
-                    </p>
-                    <p>
-                        <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/gh-username">Sayan-dev731</a>
-                    </p>
-                    <p>
-                        <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/linkedin-username">sayan-karmakar-01239a242</a>
-                    </p>
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+							<a href="mailto:your-email@example.com">Sayan.Karmakar@studentambassadors.com</a>
+					</p>
+					<p>
+							<i class="fab fa-github" aria-hidden="true"></i>
+							<a href="github.com/gh-username">Sayan-dev731</a>
+					</p>
+					<p>
+							<i class="fab fa-linkedin" aria-hidden="true"></i>
+							<a href="linkedin.com/linkedin-username">sayan-karmakar-01239a242</a>
+					</p>
 				</section>
 				<section>
 					<h2>SKILLS</h2>
@@ -37,12 +37,12 @@
 				<section>
 					<h2>EDUCATION</h2>
 					<h3>YOUR MAJOR</h3>
-	<p>
-		RCET
-	</p>
-	<p>
-		2022-2024
-	</p>
+						<p>
+							RCET
+						</p>
+						<p>
+							2022-2024
+						</p>
 				</section>            
 			</article>
 			<article id="mainRight">
@@ -53,17 +53,17 @@
 				<section>
 					<h2>WORK EXPERIENCE</h2>
 					<h3>JOB TITLE</h3>
-<p>
-		Company Name | 2008 - 2010
-</p>
-<p>
-		Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
-</p>
-<ul>
-		<li>Cool accomplishment</li>
-		<li>Cool accomplishment</li>
-		<li>Cool accomplishment</li>
-</ul>
+					<p>
+							Company Name | 2008 - 2010
+					</p>
+					<p>
+							Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
+					</p>
+					<ul>
+							<li>Cool accomplishment</li>
+							<li>Cool accomplishment</li>
+							<li>Cool accomplishment</li>
+					</ul>
 				</section>
 			</article>
 		</main>
